[package]
name = "stdio-napi"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "stdio_napi"

[package.metadata.napi]
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]

[dependencies]
napi = { version = "3.8.2", features = ["napi9", "async"] }
napi-derive = "3.5.1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
colored = "2.1"
libc = "0.2"
errno = "0.3"
atty = "0.2"

[build-dependencies]
napi-build = "2.3.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
