[package]
name = "stdio-napi"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "stdio_napi"

[package.metadata.napi]
targets = [
  "x86_64-pc-windows-msvc",
  "i686-pc-windows-msvc",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
]

[dependencies]
napi = { version = "3.8.2", features = ["napi9", "async"] }
napi-derive = "3.5.1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
colored = "2.1"
libc = "0.2"
errno = "0.3"
atty = "0.2"
regex = "1.10"
dirs = "5"

[target.'cfg(unix)'.dependencies]
futures-util = "0.3"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
nix = { version = "0.29", features = ["signal", "process", "term"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
  "wincon",
  "consoleapi",
  "processenv",
  "processthreadsapi",
  "handleapi",
  "jobapi2",
  "namedpipeapi",
  "fileapi",
  "winbase",
  "winnt",
  "winerror",
] }

[dev-dependencies]

[build-dependencies]
napi-build = "2.3.1"

[features]
default = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
